force-app/main/default/objects/BlockedItem__c/BlockedItem__c.object-meta.xml
<CustomObject>
    <label>Parametrização</label>
    <nameField>
        <displayFormat>Param-{000000000}</displayFormat>
        <label>Nome de Itens Bloqueados</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parametrizações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>