force-app/main/default/objects/BlockedItem__c/fields/AccountLkp__c.field-meta.xml
<CustomField>
    <fullName>AccountLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BlockedItems</relationshipName>
    <type>Lookup</type>
</CustomField>