force-app/main/default/objects/BlockedItem__c/fields/CenterCodeTxt__c.field-meta.xml
<CustomField>
    <fullName>CenterCodeTxt__c</fullName>
    <label>Centro de Distribuição</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DistributionCenter</valueSetName>
    </valueSet>
</CustomField>