force-app/main/default/objects/BlockedItem__c/fields/ChannelDiscountNmb__c.field-meta.xml
<CustomField>
    <fullName>ChannelDiscountNmb__c</fullName>
    <label>Desconto de Canal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>