force-app/main/default/objects/BlockedItem__c/fields/ChannelPVCLkp__c.field-meta.xml
<CustomField>
    <fullName>ChannelPVCLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal</label>
    <referenceTo>Channel__c</referenceTo>
    <relationshipName>BlockedItems</relationshipName>
    <type>Lookup</type>
</CustomField>