force-app/main/default/objects/BlockedItem__c/fields/MasterPackageAmountNmb__c.field-meta.xml
<CustomField>
    <fullName>MasterPackageAmountNmb__c</fullName>
    <label>Quantidade da Embalagem Master</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>