force-app/main/default/objects/BlockedItem__c/fields/NoDiscountRangeNmb__c.field-meta.xml
<CustomField>
    <fullName>NoDiscountRangeNmb__c</fullName>
    <description>Valor que tem que ser atingido para liberar o desconto YPVO e YPME</description>
    <label>Faixa sem Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>