force-app/main/default/objects/BlockedItem__c/fields/OrderTypeLkp__c.field-meta.xml
<CustomField>
    <fullName>OrderTypeLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Ordem</label>
    <referenceTo>OrderType__c</referenceTo>
    <relationshipName>BlockedItems</relationshipName>
    <type>Lookup</type>
</CustomField>