force-app/main/default/objects/BlockedItem__c/fields/SalesOrganizationTxt__c.field-meta.xml
<CustomField>
    <fullName>SalesOrganizationTxt__c</fullName>
    <label>Organização de Vendas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM01</fullName>
            </value>
            <value>
                <fullName>0143</fullName>
            </value>
            <value>
                <fullName>0099</fullName>
            </value>
            <value>
                <fullName>0141</fullName>
            </value>
            <value>
                <fullName>0144</fullName>
            </value>
            <value>
                <fullName>0145</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>