force-app/main/default/objects/BlockedItem__c/fields/UsesZPVCBln__c.field-meta.xml
<CustomField>
    <fullName>UsesZPVCBln__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Somente Informativo</description>
    <label>Considera Desc. Canal</label>
    <type>Checkbox</type>
</CustomField>