force-app/main/default/objects/BlockedItem__c/recordTypes/MasterPackageRT.recordType-meta.xml
<RecordType>
    <fullName>MasterPackageRT</fullName>
    <active>true</active>
    <description>Indica que para esse material/cliente existe uma embalagem master</description>
    <label>Embalagem Master</label>
</RecordType>