force-app/main/default/objects/BlockedItem__c/recordTypes/NoDiscountRange.recordType-meta.xml
<RecordType>
    <fullName>NoDiscountRange</fullName>
    <active>true</active>
    <description>Canais/Org Vendas que não possuem desconto abaixo de uma determinada faixa</description>
    <label>Faixa sem Desconto</label>
</RecordType>