force-app/main/default/objects/BlockedItem__c/recordTypes/OrderTypeBlockRT.recordType-meta.xml
<RecordType>
    <fullName>OrderTypeBlockRT</fullName>
    <active>true</active>
    <description>Bloqueio Ordem Canal</description>
    <label>Bloqueio Ordem Canal</label>
</RecordType>