force-app/main/default/objects/BlockedItem__c/recordTypes/PackageSeparationRT.recordType-meta.xml
<RecordType>
    <fullName>PackageSeparationRT</fullName>
    <active>true</active>
    <description>Bloqueio quebra de embalagem por tipo de ordem canal</description>
    <label>Quebra de Embalagem</label>
</RecordType>