force-app/main/default/objects/BlockedItem__c/recordTypes/ProductBlockRT.recordType-meta.xml
<RecordType>
    <fullName>ProductBlockRT</fullName>
    <active>true</active>
    <description>Bloqueio de Material Ordem e Centro</description>
    <label>Bloqueio de Material</label>
</RecordType>