force-app/main/default/objects/BlockedItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>ChannelPVCLkp__c</columns>
    <columns>CenterCodeTxt__c</columns>
    <columns>SalesOrganizationTxt__c</columns>
    <columns>OrderTypeLkp__c</columns>
    <columns>ProductLkp__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>