force-app/main/default/objects/BlockedItem__c/listViews/Bloqueio_Ordem_Canal.listView-meta.xml
<ListView>
    <fullName>Bloqueio_Ordem_Canal</fullName>
    <columns>ChannelPVCLkp__c</columns>
    <columns>OrderTypeLkp__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BlockedItem__c.OrderTypeBlockRT</value>
    </filters>
    <label>Bloqueio Ordem Canal</label>
</ListView>