force-app/main/default/objects/BlockedItem__c/listViews/Embalagem_Master.listView-meta.xml
<ListView>
    <fullName>Embalagem_Master</fullName>
    <columns>SalesOrganizationTxt__c</columns>
    <columns>AccountLkp__c</columns>
    <columns>ProductLkp__c</columns>
    <columns>MasterPackageAmountNmb__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BlockedItem__c.MasterPackageRT</value>
    </filters>
    <label>Embalagem Master</label>
</ListView>