force-app/main/default/objects/BlockedItem__c/listViews/Quebra_de_Embalagem.listView-meta.xml
<ListView>
    <fullName>Quebra_de_Embalagem</fullName>
    <columns>ChannelPVCLkp__c</columns>
    <columns>OrderTypeLkp__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>BlockedItem__c.PackageSeparationRT</value>
    </filters>
    <label>Quebra de Embalagem</label>
</ListView>